--- a/TestApplications/Data Analyzer/BrainPackDataAnalyzer/BrainPackDataAnalyzer/mainForm.resx
+++ b/TestApplications/Data Analyzer/BrainPackDataAnalyzer/BrainPackDataAnalyzer/mainForm.resx
@@ -132,6 +132,9 @@
   <metadata name="serialPortPassThrough.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>540, 17</value>
   </metadata>
+  <metadata name="bgw_AnalysisBackgroundWorker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>712, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>69</value>
   </metadata>
